# topic-modeling

./: .gitignore  LICENSE  README.md  pyproject.toml  validate.py
models/: best_lda_model.pkl  best_lda_model_tfidf.pkl  count_vectorizer.pkl  tfidf_vectorizer.pkl
static/html/: lda_visualisation.html  lda_visualisation_bm25.html  lda_visualisation_tfidf.html
topic_modeling/: LDA.py  bm25.py  explor_data.py  main.py  type.py  vectorization.py
